fixed sending messages with AVRO schemas